Fix render.yaml: Use type 'web' and 'runtime: static' for dashboard

--- a/render.yaml
+++ b/render.yaml
@@ -16,13 +16,13 @@ services:
         value: 18
 
   # Frontend Service (Dashboard)
-  - type: static
+  - type: web
     name: market-dashboard
     runtime: static
     # Go into directory, install, and build
     buildCommand: cd market-dashboard && npm install && npm run build
     # Directory where built files are located
-    publishDir: market-dashboard/dist
+    staticPublishPath: market-dashboard/dist
     envVars:
       - key: VITE_API_URL
         fromService:
