--- a/render.yaml
+++ b/render.yaml
@@ -16,9 +16,9 @@ services:
         value: 18
 
   # Frontend Service (Dashboard)
-  - type: web
+  - type: static
     name: market-dashboard
-    runtime: static
+    region: oregon
     # Go into directory, install, and build
     buildCommand: cd market-dashboard && npm install && npm run build
     # Directory where built files are located
